# CPP-UTDT

./: CMakeLists.txt  calculadora.cpp
.devcontainer/: Dockerfile  devcontainer.json
Ejercicio1/: main.cpp
Recursion/: arboles.cpp  clases6.h  guia5.cpp  guia6.cpp  heapsort.cpp  teo1.cpp
Wordle/: funciones.cpp  funciones.h  listado.txt  wordle.cpp
tests/: listado_test_lleno.txt  tests.cpp
